---------------------------------------------
- Wonder Scale Website                      -
---------------------------------------------

- v1.0.1060                                 -
---------------------------------------------
- 2020-12-26                                -
---------------------------------------------
.: WSW: Feature: Invoice Module (WSW-94)
.: WSM: Task: Prevent receiptId got brute force and customer information being exposed (WSW-98)

- v1.0.1050                                 -
---------------------------------------------
- 2020-12-06                                -
---------------------------------------------
.: WSW: Task: Update twitter meta (WSW-84)
.: WSM: Task: Update autocomplete api (WSW-93)

---------------------------------------------
- 2020-12-05                                -
---------------------------------------------
.: WSW: Task: Create Buildbot (WSW-84)

---------------------------------------------
- 2020-12-04                                -
---------------------------------------------
.: WSW: Task: Update SEO (WSW-38)

---------------------------------------------
- 2020-12-03                                -
---------------------------------------------
.: WSW: Task: Change Icon (WSW-89)

---------------------------------------------
- 2020-11-17                                -
---------------------------------------------
.: WSW: Task: Share QR code with social media (WSW-38)

---------------------------------------------
- 2020-11-16                                -
---------------------------------------------
.: WSW: Task: Googling Menu (WSW-32)

---------------------------------------------
- 2020-11-08                                -
---------------------------------------------
.: WSW: Task: Create build bot (WSW-84)
.: WSN: Task: Add Social Media (WSM-52)
.: WSW: Task: CLONE - Add an preferable order method (WSW-88)

---------------------------------------------