@@ -4,6 +4,11 @@
 
 - v1.0.1060                                 -
 ---------------------------------------------
+- 2020-12-27                                -
+---------------------------------------------
+.: WSM: Task: Mark order as self-pickup (WSM-257)
+
+---------------------------------------------
 - 2020-12-26                                -
 ---------------------------------------------
 .: WSW: Feature: Invoice Module (WSW-94)
